--- a/backend/smart-logistics/src/main/resources/application.properties
+++ b/backend/smart-logistics/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Database
 spring.datasource.url=jdbc:mariadb://localhost:3306/smart_logistics
-spring.datasource.username=root
+spring.datasource.username=2jo
 spring.datasource.password=1234
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 #spring.jpa.show-sql=true
