--- a/backend/smart-logistics/src/main/resources/application.properties
+++ b/backend/smart-logistics/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 #spring.jpa.show-sql=true
 
 #MyBatis
-#mybatis.type-aliases-package=com.douzone.domain
+mybatis.type-aliases-package=com.douzon.smartlogistics.entity
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 
