--- a/backend/smart-logistics/src/main/resources/application.properties
+++ b/backend/smart-logistics/src/main/resources/application.properties
@@ -2,12 +2,8 @@
 spring.datasource.url=jdbc:mariadb://localhost:3306/smart_logistics
 spring.datasource.username=2jo
 spring.datasource.password=1234
-spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
-#spring.jpa.show-sql=true
 
 #MyBatis
-#mybatis.type-aliases-package=com.douzone.domain
-mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 
-#logging.level.hello.itemservice.repository.mybatis=trace
+server.port=8888
