--- a/backend/smart-logistics/pom.xml
+++ b/backend/smart-logistics/pom.xml
@@ -48,6 +48,17 @@
 			<version>2.3.1</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- Redis 종속성 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+		<!-- Redis 세션 저장소 종속성 -->
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-data-redis</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
