--- a/backend/smart-logistics/src/main/resources/application.properties
+++ b/backend/smart-logistics/src/main/resources/application.properties
@@ -7,3 +7,12 @@ spring.datasource.password=1234
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 
 server.port=8888
+
+#redis
+spring.session.store-type=redis
+server.servlet.session.cookie.max-age=3600
+spring.session.redis.namespace=spring:session
+
+spring.redis.host=localhost
+spring.redis.password=beat1234
+spring.redis.port=6379
