--- a/backend/smart-logistics/pom.xml
+++ b/backend/smart-logistics/pom.xml
@@ -48,7 +48,18 @@
 			<version>2.3.1</version>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+		<!--	Validation 관련 처리를 위한 의존성	-->
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>2.0.1.Final</version>
+    </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<!--	Validation 관련 처리를 위한 의존성	-->
+  </dependencies>
 
 	<build>
 		<plugins>
