--- a/backend/smart-logistics/src/main/resources/application.properties
+++ b/backend/smart-logistics/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.mvc.throw-exception-if-no-handler-found=true
 
 server.port=8888
 
+mybatis.configuration.map-underscore-to-camel-case=true
+
 #redis
 spring.session.store-type=redis
 server.servlet.session.cookie.max-age=3600
