fix: pom.xml 누락 코드 수정

--- a/backend/smart-logistics/pom.xml
+++ b/backend/smart-logistics/pom.xml
@@ -81,6 +81,7 @@
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>3.0.0</version>
+		</dependency>
 		<!-- AOP -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
