--- a/backend/smart-logistics/src/main/resources/application.properties
+++ b/backend/smart-logistics/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.redis.password=beat1234
 
 spring.web.resources.add-mappings=false
 spring.mvc.throw-exception-if-no-handler-found=true
+
+#Paging
+pagehelper.helper-dialect=mariadb
+pagehelper.reasonable=true
