feat: 프로메테우스 의존성 추가 #40

--- a/backend/smart-logistics/pom.xml
+++ b/backend/smart-logistics/pom.xml
@@ -92,10 +92,18 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<!--	액츄에이터	-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+		<!--	액츄에이터	-->
+		<!--	프로메테우스	-->
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+		</dependency>
+		<!--	프로메테우스	-->
 	</dependencies>
 
 	<build>
