--- a/backend/smart-logistics/src/main/resources/application.properties
+++ b/backend/smart-logistics/src/main/resources/application.properties
@@ -13,6 +13,8 @@ server.port=8888
 spring.session.store-type=redis
 server.servlet.session.cookie.max-age=3600
 spring.session.redis.namespace=spring:session
+spring.session.redis.flush-mode=on_save
+
 
 spring.redis.host=localhost
 spring.redis.port=6379
