--- a/backend/smart-logistics/pom.xml
+++ b/backend/smart-logistics/pom.xml
@@ -103,7 +103,12 @@
 			<groupId>io.micrometer</groupId>
 			<artifactId>micrometer-registry-prometheus</artifactId>
 		</dependency>
-		<!--	프로메테우스	-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.3.29-SNAPSHOT</version>
+        </dependency>
+        <!--	프로메테우스	-->
 	</dependencies>
 
 	<build>
